<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_sites"
        android:icon="@drawable/ic_nav_sites"
        android:title="@string/nav_sites" />
    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_nav_transactions"
        android:title="@string/nav_transactions" />
    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_nav_reports"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_nav_more"
        android:title="@string/nav_more" />
</menu>
